--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,7 +805,7 @@ main {
 
 
 
-.contact-form { margin-bottom: 10px; }
+.contact-form { margin-bottom: 20px; margin-top: 20px; }
 
 .form-title { margin-bottom: 20px; }
 
@@ -1090,81 +1090,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .service-content-box { text-align: left; }
 
-  /* testimonials */
-/* 
-  .testimonials-title { margin-bottom: 25px; }
-
-  .testimonials-list {
-    gap: 30px;
-    margin: 0 -30px;
-    padding: 30px;
-    padding-bottom: 35px;
-  }
-
-  .content-card {
-    padding: 30px;
-    padding-top: 25px;
-  }
-
-  .testimonials-avatar-box {
-    transform: translate(30px, -30px);
-    border-radius: 20px;
-  }
-
-  .testimonials-avatar-box img { width: 80px; }
-
-  .testimonials-item-title {
-    margin-bottom: 10px;
-    margin-left: 95px;
-  }
-
-  .testimonials-text {
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
-  } */
-
-  /* testimonials modal */
-
-  /* .modal-container { padding: 20px; }
-
-  .testimonials-modal {
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    gap: 25px;
-    padding: 30px;
-    border-radius: 20px;
-  }
-
-  .modal-img-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .modal-avatar-box {
-    border-radius: 18px;
-    margin-bottom: 0;
-  }
-
-  .modal-avatar-box img { width: 65px; }
-
-  .modal-img-wrapper > img {
-    display: block;
-    flex-grow: 1;
-    width: 35px;
-  } */
-
-  /* clients */
-
-  /* .clients-list {
-    gap: 50px;
-    margin: 0 -30px;
-    padding: 45px;
-    scroll-padding-inline: 45px;
-  }
-
-  .clients-item { min-width: calc(33.33% - 35px); } */
+  
 
 
 
@@ -1187,14 +1113,12 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 
   /**
-   * #PORTFOLIO, BLOG
+   * #PORTFOLIO
    */
 
   .project-img{ border-radius: 16px; }
 
-  /* .blog-posts-list { gap: 30px; }
-
-  .blog-content { padding: 25px; } */
+ 
 
 
 
@@ -1202,10 +1126,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * #CONTACT
    */
 
-  .mapbox {
-    height: 380px;
-    border-radius: 18px;
-  }
+  
 
   .input-wrapper {
     gap: 30px;
@@ -1264,18 +1185,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 
 
-  /**
-   * ABOUT
-   */
+  
 
-  /* testimonials modal */
-
-  /* .testimonials-modal {
-    gap: 35px;
-    max-width: 680px;
-  }
-
-  .modal-avatar-box img { width: 80px; } */
+ 
 
 
 
@@ -1414,13 +1326,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     gap: 20px 25px;
   }
 
-  /* testimonials */
-
-  /* .testimonials-item { min-width: calc(50% - 15px); } */
-
-  /* clients */
-
-  /* .clients-item { min-width: calc(25% - 38px); } */
+ 
 
 
 
@@ -1432,11 +1338,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 
 
-  /**
-   * BLOG
-   */
-
-   /* .blog-banner-box { height: 230px; } */
+  
 
  }  
 
